--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
     name: petcare
-    env: java
+    runtime: docker
     plan: free
-    buildCommand: "./mvnw clean package"
-    startCommand: "java -jar target/petcare-0.0.1-SNAPSHOT.jar"
+    buildCommand: ""
+    startCommand: ""
+    autoDeploy: true
