Arreglar encoding de application-render y script H2 para Render

--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -1,32 +1,16 @@
-# ==============================
-# Datasource H2 en memoria
-# ==============================
 spring.datasource.url=jdbc:h2:mem:petcaredb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# ==============================
-# JPA / Hibernate
-# ==============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=false
-
-# Muy importante para que se ejecute data-render.sql
-# después de que Hibernate cree la tabla 'usuarios'
 spring.jpa.defer-datasource-initialization=true
 
-# ==============================
-# Inicialización SQL
-# ==============================
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data-render.sql
 
-# ==============================
-# Otros
-# ==============================
 spring.h2.console.enabled=false
 
-# Render suele inyectar PORT en una variable de entorno
-server.port=${PORT:8080}
+server.port=8080
